Fix range slider on Firefox

--- a/src/css/sliders.css
+++ b/src/css/sliders.css
@@ -40,11 +40,11 @@
 }
 [type="range"]::-moz-range-progress {
 	height: 0.5em;
-	background: black;
+	background: var(--fraunces-yellow);
 }
 [type="range"]::-ms-fill-lower {
 	height: 0.5em;
-	background: black;
+	background: var(--fraunces-yellow);
 }
 [type="range"]::-webkit-slider-thumb {
 	margin-top: -1.25em;
